clusters/managed/monitoring/grafana/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://grafana.trusted.nirmalhk7.com"
    gethomepage.dev/group: Observability
    gethomepage.dev/description: "Metrics dashboards"
    gethomepage.dev/icon: grafana
    gethomepage.dev/app: grafana
    gethomepage.dev/name: Grafana
    gethomepage.dev/weight: "10"
    gethomepage.dev/widget.type: grafana
    gethomepage.dev/widget.url: "http://main-grafana.mgd-monitoring.svc.cluster.local."
    gethomepage.dev/widget.username: "${GRAFANA_USER}"
    gethomepage.dev/widget.password: "${GRAFANA_PASSWORD}"
    gethomepage.dev/widget.version: "2"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=grafana"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`grafana.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: main-grafana
          port: 80
